--- a/package.json
+++ b/package.json
@@ -6,14 +6,15 @@
   "author": "Danny van der Jagt <dannyvanderjagt@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "build": "./node_modules/.bin/gulp"
+    "watch": "./node_modules/.bin/gulp buildAndWatch",
+    "build": "./node_modules/.bin/gulp build"
   },
   "dependencies": {
-    "gulp": "^3.9.1",
+    "gulp": "^4.0.0",
     "gulp-cli": "^2.0.1",
-    "gulp-plumber": "^1.2.0",
+    "gulp-plumber": "^1.2.1",
     "gulp-pug": "^4.0.1",
-    "gulp-sass": "^4.0.1",
+    "gulp-sass": "^4.0.2",
     "gulp-server-livereload": "^1.9.2"
   }
 }
